# layers

./: Dockerfile  Makefile  build.sh  terraform.tf
.github/workflows/: deploy.yml
layers/base/: pyproject.toml
modules/layer/: terraform.tf
