[tool.poetry]
name = "base"
version = "0.1.0"
description = ""
authors = ["sinofseven <em.s.00001@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
boto3-stubs = {version = "1.34.52", extras = ["dynamodb", "s3"]}
boto3 = "1.34.52"
feedparser = "6.0.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
